# django-boilerplate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.db.yml  docker-compose.nginx.yml  docker-compose.yaml  docker-compose.yml  pyproject.toml
nginx/: app.conf
requirements/: all.txt  common.txt  dev.txt  prod.txt  test.txt
src/: .env.example  conftest.py  manage.py  pytest.ini
src/app/: asgi.py  urls.py  wsgi.py
src/app/settings/: common.py  dev.py  dev_notebook.py  prod.py  test.py
src/authentication/: admin.py  constants.py  forms.py  models.py  serializers.py  urls.py  views.py
src/authentication/migrations/: 0001_initial.py  0002_alter_user_username.py
src/templates/email/: base_email.html
src/tests/authentication/: factories.py  fixtures.py  test_auth_views.py
src/users/: serializers.py  urls.py  views.py
src/utils/: __init__.py  faker_common.py
