[tool.poetry]
name = "django-boilerplate"
version = "0.1.0"
description = "Django DRF Boilerplate with JWT Authentication"
authors = ["Hoàng Văn Ngà <ngahv2222@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.2.17"
psycopg2-binary = "2.9.3"
django-filter = "23.5"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.2.0"
django-phonenumber-field = "6.3.0"
markdown = "3.3.7"
Pillow = "9.2.0"
phonenumbers = "8.12.39"
django-extensions = "3.2.1"
setuptools = "^75.6.0"

[tool.poetry.group.dev.dependencies]
drf-yasg = "1.21.8"
flake8 = "3.8.4"
python-dotenv = "0.20.0"
config = "0.5.1"
pre-commit = "2.20.0"

[tool.poetry.group.test.dependencies]
faker = "13.15.1"
pytest = "7.1.2"
pytest-django = "4.5.2"
pytest-cov = "3.0.0"
factory-boy = "3.2.0"

[tool.poetry.group.prod.dependencies]
gunicorn = "23.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests"]
